# nanovt

./: .gitignore  LICENSE  README.md  pyproject.toml  transcribe_video.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/nanovt/: __init__.py  __main__.py  audio.py  cli.py  transcription.py
src/video_transcriber/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py  test_entry_point.py  test_main_workflow.py  test_retry.py
