[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "nanovt"
version = "0.2.1"
description = "CLI tool to extract audio from video files and transcribe it with OpenAI speech-to-text."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Xiao Li", email = "xiaoli3397@gmail.com" },
]
keywords = [
    "audio-transcription",
    "ffmpeg",
    "openai",
    "speech-to-text",
    "video-transcription",
]
dependencies = [
    "openai>=1.40",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.scripts]
nanovt = "nanovt.cli:main"

[dependency-groups]
dev = [
    "build",
    "pyright",
    "pytest",
    "ruff",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nanovt"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
